--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,9 +1,9 @@
 .modal {
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
   top: 0;
+  bottom: 0;
+  left: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
@@ -12,9 +12,16 @@
 }
 
 .modal-content {
-  background-color: #fefefe;
+  background-color: #ececec;
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
+  border-radius: 5px;
   width: 80%;
+  height: 20%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
